--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^7.0.0",
     "highlight.js": "^9.15.6",
     "nes.css": "^2.1.1",
     "react": "^16.8.6",
