--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "dotenv": "^7.0.0",
+    "formik": "^1.5.4",
     "highlight.js": "^9.15.6",
     "nes.css": "^2.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.8",
     "react-router-dom": "^5.0.0",
+    "react-rte": "^0.16.1",
     "react-scripts": "2.1.8",
     "styled-components": "^4.2.0"
   },
