--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^7.0.0",
     "formik": "^1.5.4",
     "highlight.js": "^9.15.6",
+    "html-react-parser": "^0.7.0",
     "nes.css": "^2.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
